@@ -750,75 +750,6 @@ sub get_files {
 
 }
 
-=item delete_transaction(\%myconfig, $form)
-
-Deletes a transaction identified by $form->{id}, whether it is an ar or ap
-transaction is identified by $form->{vc}.  $form->{invnumber} used for the 
-audittrail routine.
-
-=cut
-
-sub delete_transaction {
-    my ( $self, $myconfig, $form ) = @_;
-
-    # connect to database, turn AutoCommit off
-    my $dbh = $form->{dbh};
-
-    my $table = ( $form->{vc} eq 'customer' ) ? 'ar' : 'ap';
-
-    my %audittrail = (
-        tablename => $table,
-        reference => $form->{invnumber},
-        formname  => 'transaction',
-        action    => 'deleted',
-        id        => $form->{id}
-    );
-
-    $form->audittrail( $dbh, "", \%audittrail );
-    my $query = qq|DELETE FROM ac_tax_form WHERE entry_id IN
-                   (SELECT entry_id FROM acc_trans WHERE trans_id = ?)|;
-    $dbh->prepare($query)->execute($form->{id}) || $form->dberror($query);
-
-    $query = qq|DELETE FROM $table WHERE id = ?|;
-    $dbh->prepare($query)->execute($form->{id}) || $form->dberror($query);
-
-    $query = qq|DELETE FROM acc_trans WHERE trans_id = ?|;
-    $dbh->prepare($query)->execute( $form->{id} ) || $form->dberror($query);
-
-    # get spool files
-    $query = qq|SELECT spoolfile 
-				  FROM status
-				 WHERE trans_id = ?
-				   AND spoolfile IS NOT NULL|;
-
-    $logger->debug("query: $query");
-    my $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    my $spoolfile;
-    my @spoolfiles = ();
-
-    while ( ($spoolfile) = $sth->fetchrow_array ) {
-        push @spoolfiles, $spoolfile;
-    }
-
-    $sth->finish;
-
-    $query = qq|DELETE FROM status WHERE trans_id = ?|;
-    $dbh->prepare($query)->execute( $form->{id} ) || $form->dberror($query);
-
-    # commit
-    my $rc = $dbh->commit;
-
-    if ($rc) {
-        foreach $spoolfile (@spoolfiles) {
-            unlink "${LedgerSMB::Sysconfig::spool}/$spoolfile" if $spoolfile;
-        }
-    }
-
-    $rc;
-}
-
 =item transactions(\%myconfig, $form)
 
 Generates the transaction and outstanding reports.  Form variables used in this
