@@ -953,87 +953,6 @@ sub reverse_invoice {
 
 }
 
-sub delete_invoice {
-    my ( $self, $myconfig, $form ) = @_;
-
-
-    # connect to database
-    my $dbh = $form->{dbh};
-
-    my %audittrail = (
-        tablename => 'ap',
-        reference => $form->{invnumber},
-        formname  => $form->{type},
-        action    => 'deleted',
-        id        => $form->{id}
-    );
-
-    $form->audittrail( $dbh, "", \%audittrail );
-
-    my $query = qq|SELECT parts_id FROM invoice WHERE trans_id = ?|;
-    my $sth   = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    my $item;
-    my %updparts = ();
-    while ( ($item) = $sth->fetchrow_array ) {
-        $updparts{$item} = 1;
-    }
-    $sth->finish;
-
-    &reverse_invoice( $dbh, $form );
-
-
-    # delete spool files
-    $query = qq|
-		SELECT spoolfile FROM status 
-		 WHERE trans_id = ?
-		       AND spoolfile IS NOT NULL|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    my $spoolfile;
-    my @spoolfiles = ();
-
-    while ( ($spoolfile) = $sth->fetchrow_array ) {
-        push @spoolfiles, $spoolfile;
-    }
-    $sth->finish;
-
-    # delete status entries
-    $query = qq|DELETE FROM status WHERE trans_id = ?|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    if ($rc) {
-        foreach $item ( keys %updparts ) {
-            $item  = $dbh->quote($item);
-            $query = qq|
-				UPDATE parts 
-				   SET avgcost = avgcost($item),
-				       lastcost = lastcost($item)
-				 WHERE id = $item|;
-            $dbh->do($query) || $form->dberror($query);
-        }
-
-        foreach $spoolfile (@spoolfiles) {
-            unlink "${LedgerSMB::Sysconfig::spool}/$spoolfile"
-              if $spoolfile;
-        }
-    }
-    #$query = "DELETE FROM invoice WHERE trans_id = ?";#tshvr already done in reverse_invoice
-    #$sth = $dbh->prepare($query);
-    #$sth->execute($form->{id});
-    # delete AP record
-    $query = qq|DELETE FROM ap WHERE id = ?|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-    my $rc = $dbh->commit;
-
-    $rc;
-
-}
-
 sub retrieve_invoice {
     my ( $self, $myconfig, $form ) = @_;
 
