@@ -1886,73 +1886,6 @@ sub reverse_invoice {
 
 }
 
-sub delete_invoice {
-    my ( $self, $myconfig, $form ) = @_;
-
-    my $dbh = $form->{dbh};
-    my $sth;
-
-    &reverse_invoice( $dbh, $form );
-
-    my %audittrail = (
-        tablename => 'ar',
-        reference => $form->{invnumber},
-        formname  => $form->{type},
-        action    => 'deleted',
-        id        => $form->{id}
-    );
-
-    $form->audittrail( $dbh, "", \%audittrail );
-
-    # delete AR record
-    
-    my $query = qq|DELETE FROM invoice WHERE trans_id = ?|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-    $sth->finish;
-    $query = qq|DELETE FROM acc_trans WHERE trans_id = ?|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-    $sth->finish;
-
-    $query = qq|DELETE FROM ar WHERE id = ?|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-    $sth->finish;
-
-    # delete spool files
-    $query = qq|
-		SELECT spoolfile FROM status
-		 WHERE trans_id = ? AND spoolfile IS NOT NULL|;
-    $sth = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    my $spoolfile;
-    my @spoolfiles = ();
-
-    while ( ($spoolfile) = $sth->fetchrow_array ) {
-        push @spoolfiles, $spoolfile;
-    }
-    $sth->finish;
-
-    # delete status entries
-    $query = qq|DELETE FROM status WHERE trans_id = ?|;
-    $sth   = $dbh->prepare($query);
-    $sth->execute( $form->{id} ) || $form->dberror($query);
-
-    my $rc = $dbh->commit;
-
-    if ($rc) {
-        foreach $spoolfile (@spoolfiles) {
-            unlink "${LedgerSMB::Sysconfig::spool}/$spoolfile"
-              if $spoolfile;
-        }
-    }
-
-    $rc;
-
-}
-
 sub retrieve_invoice {
     my ( $self, $myconfig, $form ) = @_;
 
